--- a/maven-simple/pom.xml
+++ b/maven-simple/pom.xml
@@ -8,6 +8,7 @@
         <groupId>com.mlesniak.jacoco</groupId>
         <artifactId>module-main</artifactId>
         <version>1.0</version>
+           <packaging>pom</packaging>
     </parent>
 
   
