--- a/module-1/pom.xml
+++ b/module-1/pom.xml
@@ -11,6 +11,6 @@
  
     </parent>
     <artifactId>module-1</artifactId> 
-      <packaging>pom</packaging>             
+      <packaging>jar</packaging>             
                         
 </project>
