--- a/module-2/pom.xml
+++ b/module-2/pom.xml
@@ -7,18 +7,11 @@
     <parent>
         <groupId>com.mlesniak.jacoco</groupId>
         <artifactId>module-main</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
       
     </parent>
     <artifactId>module-2</artifactId>
  <packaging>jar</packaging>
     
-<dependencies>
-        <dependency>
-            <groupId>com.mlesniak.jacoco</groupId>
-            <artifactId>module-1</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+
 </project>
