--- a/maven-simple/pom.xml
+++ b/maven-simple/pom.xml
@@ -14,7 +14,14 @@
   
   <artifactId>maven-simple</artifactId> 
       <packaging>jar</packaging>
-         
+         <dependencies>
+        <dependency>
+            <groupId>com.mlesniak.jacoco</groupId>
+            <artifactId>module-2</artifactId>
+            <version>1.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
   
 
